--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "uuid": "^9.0.1",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.6",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
