--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "react": "^18",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
